<resources>
    <string name="app_name">Hello Dati</string>
    <string name="action_settings">Settings</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_hotspot">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="guide_item">Guide</string>
    <string name="apps_item">Apps</string>
    <string name="calls_item">Calls</string>
    <string name="basket_item">Basket</string>
    <string name="send_order">Place your orders</string>
    <string name="user_name_guest">Guest</string>
    <string name="drawer_item_commands">My orders</string>
    <string name="drawer_item_reservations">My reservations</string>
    <string name="drawer_item_dashboard">Settings</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_clear_data">Clear personal data</string>
    <string name="drawer_item_wifi">Wifi</string>
    <string name="drawer_item_language">Language</string>
    <string name="opening_time_today">Today</string>
    <string name="call_fragment_title">Calls</string>
    <string name="call_SAMU">SAMU</string>
    <string name="call_Fire_brigade">Fire fighters</string>
    <string name="call_Police">Police</string>
    <string name="call_aeroport">Tunis-Carthage Airport</string>
    <string name="option_call_room_title">Rooms</string>
    <string name="option_call_urgent_title">Emergency</string>
    <string name="option_call_room_service_title">Room service</string>
    <string name="option_call_local_title">Local calls</string>
    <string name="option_call_international_title">International</string>
    <string name="option_call_room_desc">Call other rooms in this hotel</string>
    <string name="option_call_urgent_desc">List of useful phone numbers in case of emergency.</string>
    <string name="option_call_room_service_desc">Call the reception of the hotel</string>
    <string name="option_call_local_desc">Free call to local phone numbers.</string>
    <string name="option_call_international_desc">International Phone numbers prefix, this will cost you extra fee.</string>
    <string name="option_call_room_desc_long">rooms long desc</string>
    <string name="option_call_urgent_desc_long">emergency long dec</string>
    <string name="option_call_room_service_desc_long">room service long desc</string>
    <string name="option_call_local_desc_long">local call long desc</string>
    <string name="option_call_international_desc_long">international long desc</string>
    <string name="call_fragment_title_desc">Easy call mode</string>
    <string name="restaurant_menu">Menu</string>
    <string name="restaurant_about">About</string>
    <string name="restaurant_review">Reviews</string>
    <string name="restaurant_reservation">Booking</string>
    <string name="shop_order_noew">Order now</string>
    <string name="shop_request_noew">Request</string>
    <string name="menu_item_add_to_cart_comment_hint">Comment...</string>
    <string name="restaurant_submit_reservation">Book now</string>
    <string name="reservation_date">Date</string>
    <string name="menu_item_reservation_persones">Guests</string>
    <string name="btn_avis">Write a review</string>
    <string name="text_popup_rating">Your experience is valuable to other travelers. Thank you!</string>
    <string name="cancel">Cancel</string>
    <string name="send_review">Send Review</string>
    <string name="btn_promo">All specials</string>
    <string name="date">Date</string>
    <string name="country">Country</string>
    <string name="comment">Comment</string>
    <string name="head_office">The head office :</string>
    <string name="phones">Phones</string>
    <string name="mail">Email</string>
    <string name="website">Website</string>
    <string name="tripadvisor">Tripadvisor</string>
    <string name="btn_contact">Contact-us</string>
    <string name="validate">Validate</string>
    <string name="textEmail">Your Email</string>
    <string name="phone2">Phone </string>
    <string name="email">Email *</string>
    <string name="email2">Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="welcome_text">welcome</string>
    <string name="next_text">NEXT</string>
    <string name="photo">Profile picture</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="passport">Passeport</string>
    <string name="password">Old user code</string>
    <string name="user_code_text"><font color='#EDDA07'>*</font> Your <font color='#EDDA07'>user ID</font> is confidential and should never be disclosed. (4 numeric digits)</string>
    <string name="userIdHint">New user code</string>
    <string name="userIdCnfrHint">Confirm your user code</string>
    <string name="confirm_request">Please enter your passcode</string>
    <string name="about">About</string>
    <string name="user_id_required">Enter your user code (4 characters required)</string>
    <string name="user_id_cnfr_required">The user code confirmation does not match</string>
    <string name="notes">Notes</string>
    <string name="objet">Subject</string>
    <string name="basket">Basket</string>
    <string name="item_purchase_waiting">Waiting</string>
    <string name="item_purchase_preparation">In preparation</string>
    <string name="item_purchase_in_delivery">In delivery</string>
    <string name="item_purchase_delivred">Delivred</string>
    <string name="item_purchase_rejected">Rejected</string>
    <string name="item_purchase_cancelled">Cancelled</string>
    <string name="item_purchase_in_progress">In progress</string>
    <string name="item_purchase_ready">Ready</string>
    <string name="empty_basket">Your basket is empty</string>
    <string name="empty_order">No orders available</string>
    <string name="empty_booking">No bookings available</string>
    <string name="time">Time</string>
    <string name="at">At</string>
    <string name="user_code_hint">Your user code</string>
    <string name="info">You need help ? Just contact the reception.</string>
    <string name="empty_avis">Soyez le premier  à donner votre avis</string>
    <string name="notification">Notifications</string>
    <string name="notif_order">Order</string>
    <string name="notif_booking">Booking</string>
    <string name="notif_order_delivered"> has been delivered successfully.</string>
    <string name="notif_order_rejected"> has been rejected, please contact the frontdesk to have more information.</string>
    <string name="notif_order_in_delivery"> has been picked up by our delivery agent and is on it\'s way</string>
    <string name="notif_order_in_progress"> is in progress</string>
    <string name="notif_order_item_rejected_p1">This item: </string>
    <string name="notif_order_item_rejected_p2">isn\'t available and won\'t be included in your order</string>
    <string name="notif_order_item_ready"> is ready and will be picked up by our delivery agent</string>
    <string name="notif_booking_accepted_p2">reservation has been accepted</string>
    <string name="your">Your</string>
    <string name="your_order">Your order</string>
    <string name="accepted">Accepted</string>
    <string name="waiting">Waiting</string>
    <string name="rejected">Rejected</string>
    <string name="notif_booking_rjected_p2">reservation has been rejected please contact the frontdesk to have more information</string>
    <string name="new_txt">New</string>
    <string name="item">Order(s)</string>
    <string name="back_menu">Back to menu</string>
    <string name="persons">person (s)</string>
    <string name="see_details">See details</string>
    <string name="request_success">Request sent successfully</string>
    <string name="reservation_title">Your reservation has been placed</string>
    <string name="reservation_summery">We have received your reservation and we will confirm it accordingly</string>
    <string name="date_of_reservation">Date of reservation</string>
    <string name="number_of_person">Number of person</string>
    <string name="back_to_reservation">Back to reservation</string>
    <string name="empty_notification">No notification</string>
    <string name="coming_soon_title">Prepare to be amazed</string>
    <string name="coming_soon_sub_title">Our team are currently working hard to help you find joy</string>
    <string name="no_notifications_title">No notifications</string>
    <string name="no_notifications_sub_title">You have no notifications for the moment</string>
    <string name="no_basket_title">No saved items</string>
    <string name="no_basket_sub_title">Quick, and tasty ordering starts now !</string>
    <string name="no_menu_title">Empty List for Now</string>
    <string name="no_menu_sub_title">Stay tuned!</string>
    <string name="no_order_title">No order</string>
    <string name="no_order_sub_title">Make your first order now !</string>
    <string name="no_reservation_title">No reservation</string>
    <string name="no_reservation_sub_title">Make your first reservation now !</string>
    <string name="device_info">Device Informations</string>
    <string name="device_csi">Customer Satisfaction Index</string>
    <string name="device_room">Room Number :</string>
    <string name="device_version">App Version :</string>
    <string name="next">NEXT</string>
    <string name="start">GOT IT</string>
    <string name="Total_commands">Total</string>
    <string name="error_datiphone">Contact Hello Dati to update App</string>
    <string name="rules_of_use_txt">By pressing Next, you accept our <u><font color='#EDDA07'>Terms</font></u> and our <u><font color='#EDDA07'>Data usage policy.</font></u></string>
    <string name="rules_of_use_txt1"><u><font color='#EDDA07'>Terms and Conditions</font></u></string>
    <string name="no_order">Ordering not allowed</string>
    <string name="no_booking">Booking not allowed</string>
    <string name="no_booking_error_date">The date you selected is not available</string>
    <string name="no_booking_error_date1">The time you selected is not available since</string>
    <string name="no_booking_error_date2">is closed</string>
    <string name="booking_sent_success">Booking sent successfully</string>
    <string name="order_added_success">successfully added to the basket</string>
    <string name="date_required">Date required</string>
    <string name="hour_required">Time required</string>
    <string name="thanks_for_order">Thanks for your Order</string>
    <string name="follow_order">Follow your order in \" My orders \" in the sidebar at left</string>
    <string name="follow_order_btn">Follow order</string>
    <string name="reset_password">Reset Password</string>
    <string name="device_gsf">GSF Number :</string>
    <string name="in_room_food">In-Room Dining</string>
    <string name="in_room_drink">In-Room Drink</string>
    <string name="restaurant_and_bar">Restaurant &amp; Bar</string>
    <string name="well_being">Well-being</string>
    <string name="event_service">Hotel happenings</string>
    <string name="concierge_service">Guest services</string>
    <string name="meeting_service">Meetings and events</string>
    <string name="contact_us_service">Contact us</string>
    <string name="leisure_service">Activities and leisure</string>
    <string name="openning_time_from">From</string>
    <string name="openning_time_to">To</string>
    <string name="msg_request_concierge">Are you sure you want to request this service?</string>
    <string name="msg_must_select_item">You must select a service to request</string>
    <string name="fidji_spa_title">Fidji spa</string>
    <string name="about_fidji_spa">Fidji Spa, a partner of Business Hotel, is your secret refuge for relaxation and rejuvenation. Leave your thoughts at the door of this wellness space.</string>
    <string name="per_person">Per person</string>
    <string name="reservation_number">Invoice number : </string>
</resources>