<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
       <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_notif"
            android:title="@string/menu_notification"
            app:actionViewClass="android.widget.TextView"
            app:itemTextColor="@color/colorAccent"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_hotspot"
            android:visible="false"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow"
            android:visible="false"/>

        <item
            android:id="@+id/nav_hotspot_switch"
            android:icon="@drawable/ic_wifi_tethering_black_24dp"
            android:title="Hotspot"
            app:itemTextColor="@color/colorAccent"
            />
    </group>
</menu>