<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="50dp"
    android:paddingBottom="50dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/linearPopupcontact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btn_cancelContact"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:src="@drawable/ic_btn_close"
                android:text="Button" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:drawableRight="@drawable/ic_mailscontact"
                android:hint="@string/email"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/objet"
                android:textSize="15dp" />


            <EditText

                android:id="@+id/editText_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearPopupcontact"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_rect"
                android:gravity="top|left"
                android:hint="@string/textEmail"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="5"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:scrollbars="vertical"
                android:textSize="15dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editText_Email"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="36dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                app:cardBackgroundColor="@android:color/holo_red_light"
                app:cardCornerRadius="6.7dp"
                app:cardElevation="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_sendContact"
                        android:layout_width="420dp"
                        android:layout_height="51.3dp"
                        android:background="#21386a"
                        android:text="@string/validate"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="60dp"
                    android:src="@drawable/ic_valid" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>