<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_review"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="ltr"
    android:paddingLeft="15dp"
    android:paddingTop="50dp"
    android:paddingRight="15dp"
    android:paddingBottom="50dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/txtPop_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/text_popup_rating"
                android:textSize="16dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/rating_design"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:scaleX="0.7"
                android:scaleY="0.7">


                <RatingBar
                    android:id="@+id/ratingBarReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:rating="3"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:stepSize="1" />

            </RelativeLayout>

            <EditText
                android:id="@+id/editText_Comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_rect"
                android:gravity="top|left"
                android:hint="@string/btn_avis"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="5"
                android:paddingLeft="10dp"

                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:scrollbars="vertical"
                android:textSize="15dp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/red_rect_design"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btn_sendReview"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="100dp"
                    android:background="@drawable/green_rect_design"
                    android:drawableRight="@drawable/ic_valid"
                    android:drawablePadding="2dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/send_review"
                    android:textAllCaps="false"
                    android:textColor="#fff" />
            </RelativeLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>