<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:background="#eeeeee"
    android:layoutDirection="ltr"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/image"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="2dp"
        android:backgroundTint="#eeeeee"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent">

        <ImageView
            android:id="@+id/guest_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_user_icon"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/coordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/image">

        <TextView
            android:id="@+id/guest_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily=""
            android:singleLine="true"
            android:maxWidth="170dp"
            android:text="@string/user_name_guest"
            android:textColor="#555555"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.haipq.android.flagkit.FlagImageView
            android:id="@+id/flag_image_view"
            android:layout_width="17dp"
            android:layout_height="12dp"
            android:layout_below="@id/guest_name"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="2dp" />

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@id/guest_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/flag_image_view"
            android:fontFamily="@font/interstateplus_light"
            android:text="@string/country"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/comment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_name"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/interstateplus_light"
            android:textColor="#555555"
            android:textSize="12sp" />

    </RelativeLayout>

    <RatingBar
        android:id="@+id/comment_rate"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:layout_marginEnd="-25dp"
        android:theme="@style/ReviewRatingBar"
        android:numStars="5"
        android:scaleX="0.4"
        android:scaleY="0.4"
        />

    <TextView
        android:id="@+id/comment_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/coordinate"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/interstateplus_light"
        android:inputType="textMultiLine"
        android:text="@string/comment"
        android:textColor="#555555"
        android:textSize="15sp" />
</RelativeLayout>